[FIX] 61401: Add scrollbar - Case template Kund dhHelpdeskUTV. Fixed text alignemt for IE.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -3998,6 +3998,7 @@ th.sorting_disabled
     overflow-x: hidden;
     overflow-y: auto;
     direction: rtl;
+    text-align: left;
 }
 
 div.chosen-container.chosen-container-multi.error,
